refactor : 자바 문법 변경
.collect(Collections.toList()) -> .toList()